--- a/style.css
+++ b/style.css
@@ -40,3 +40,35 @@
 .body{
     background: turquoise;
 }
+#main-logo{
+    width: 300px;
+    height: 300px;
+    border-bottom: 100%;
+    
+}
+.title{
+    font-size: 30px;
+    
+}
+#logo8{
+    width: 450px;
+    height: 450px;
+    padding-left: 30%;
+    border-bottom:  100%;
+}
+#logo9{
+    width: 650px;
+    height: 350px;
+    padding-left: 20px;
+    border-bottom: 100%;
+}
+#logo10{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
+#logo11{
+    width: 1000px;
+    height: 950px;
+}
+
